# lobx-rs

./: .env  Cargo.toml  MONITORING.md  README.md  demo_script.md  docker-compose.db.yml  docker-compose.monitoring.yml  run-fast-demo.sh
examples/: market_data_demo.rs  test_websocket.rs
monitoring/: nginx.conf  prometheus.yml
monitoring/grafana/dashboards/: lobx-latency-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
scripts/: start_lobx_monitoring.sh
sql/: init.sql
src/: lib.rs  main.rs  telemetry.rs
src/engine/: book.rs  mod.rs  types.rs
src/market_data/: external_book.rs  market_maker.rs  mod.rs  normaliser.rs  router.rs  unified_book.rs
src/market_data/adapters/: hyperliquid.rs  hyperliquid_types.rs  mod.rs
src/persist/: mod.rs  postgres.rs  snapshot.rs  types.rs  wal.rs
