[package]
name = "lobx-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime + concurrency
tokio = { version = "1.39", features = ["full"] }
futures = "0.3"
parking_lot = "0.12"
crossbeam = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "json"] }
async-trait = "0.1.78"


# Networking
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["json", "gzip", "stream"] }
hyper = { version = "1.4", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
csv = "1.3"

# Protobuf
prost = "0.13"
prost-types = "0.13"
tonic = { version = "0.12", features = ["transport"] }  # optional, for gRPC

# Data structures & utils
ahash = "0.8"
smallvec = "1.13"
ordered-float = "4.2"
itertools = "0.13"

# Metrics, logging, errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
hdrhistogram = "7.5"
anyhow = "1.0"
thiserror = "1.0"
metrics = "=0.22.4"  # Pinning to avoid breaking changes
metrics-exporter-prometheus = { version = "=0.14.0", optional = true }
rand = "0.8"

# Config & CLI
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
dotenvy = "0.15"

# Persistence
sled = "0.34"
rusqlite = { version = "0.31", features = ["bundled"] }

# Web / API layer (optional)
axum = { version = "0.7", features = ["macros", "json"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# TUI (optional)
ratatui = "0.26"
crossterm = "0.28"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
quickcheck = "1.0"

[features]
metrics-exporter = ["dep:metrics-exporter-prometheus"]

[profile.release]
# Maximum performance optimizations
opt-level = 3
lto = true                    # Link-time optimization
codegen-units = 1            # Single codegen unit for better optimization
panic = "abort"              # Smaller binaries
strip = true                 # Remove debug symbols
overflow-checks = false      # Disable runtime overflow checks for speed

[profile.release-lto]
inherits = "release"
lto = "fat"                  # Aggressive LTO
codegen-units = 1

[build-dependencies]
prost-build = "0.13"
